# to-links

./: .env.example  .gitignore  README.md  deploy.sh
app/: Cargo.toml  README.md  deploy.sh
app/src/: error.rs  handlers.rs  lib.rs  main.rs  models.rs  state.rs  templates.rs  utils.rs
app/templates/: base.html  create_link.html  form_error.html  index.html  link_row.html  links_list.html
app/tests/: integration_test.rs
dnsmasq/: shortcuts.conf  shortcuts.conf.template
nginx/: to-links.conf  to-links.conf.template
systemd/: to-links.service  to-links.service.template
